// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSettings() it should work (cli: false, package: false, noCimmit: false, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: false, noCimmit: false, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: false, noCimmit: true, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: false, noCimmit: true, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: true, noCimmit: false, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "bugs": Object {
      "url": "https://github.com/username/<repo>/issues/new",
    },
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "repository": Object {
      "type": "git",
      "url": "https://github.com/username/<repo>",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "github/workflows/release.yml",
      ".github/workflows/release.yml",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: true, noCimmit: false, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: true, noCimmit: true, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "bugs": Object {
      "url": "https://github.com/username/<repo>/issues/new",
    },
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "repository": Object {
      "type": "git",
      "url": "https://github.com/username/<repo>",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "github/workflows/release.yml",
      ".github/workflows/release.yml",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: false, package: true, noCimmit: true, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: false, noCimmit: false, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: false, noCimmit: false, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: false, noCimmit: true, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: false, noCimmit: true, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: true, noCimmit: false, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "bugs": Object {
      "url": "https://github.com/username/<repo>/issues/new",
    },
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "repository": Object {
      "type": "git",
      "url": "https://github.com/username/<repo>",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "github/workflows/release.yml",
      ".github/workflows/release.yml",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: true, noCimmit: false, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: true, noCimmit: true, github: "username") 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    ".github",
    ".github/workflows",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": "username",
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "bugs": Object {
      "url": "https://github.com/username/<repo>/issues/new",
    },
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "repository": Object {
      "type": "git",
      "url": "https://github.com/username/<repo>",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "github/dependabot.yml",
      ".github/dependabot.yml",
    ],
    Array [
      "github/CODEOWNERS",
      ".github/CODEOWNERS",
    ],
    Array [
      "github/workflows/qa.yml",
      ".github/workflows/qa.yml",
    ],
    Array [
      "github/workflows/release.yml",
      ".github/workflows/release.yml",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;

exports[`getSettings() it should work (cli: true, package: true, noCimmit: true, github: undefined) 1`] = `
Object {
  "files": Array [
    "src/index.ts",
    "src/lib/types.ts",
    "tests/shared/.keep",
    "tests/type/.keep",
  ],
  "folders": Array [
    ".vscode",
    "src",
    "src/lib",
    "src/bin",
    "tests/shared",
    "tests/type",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
  ],
  "github": Object {
    "name": undefined,
  },
  "libraryDevelopment": Array [
    "carna",
    "@types/node",
    "typescript",
  ],
  "libraryProduction": Array [],
  "packageBin": Object {},
  "packageInit": Object {
    "author": "name <email>",
    "engines": Object {
      "node": ">=14",
      "npm": ">=6",
    },
    "private": true,
    "publishConfig": Object {
      "access": "public",
    },
    "version": "0.1.0",
  },
  "packagePeerDependencies": Array [],
  "packageScripts": Object {
    "analyse": "npx carna analyse",
    "build": "npx carna build",
    "prebuild": "rm -rf ./build",
    "prepare": "[ \\"$CI\\" != \\"\\" ] || husky install ./node_modules/carna/configs/husky",
    "test": "npx carna test",
    "test:watch": "npx carna test -w",
  },
  "packageUpdate": Object {
    "main": "build/index.js",
    "types": "build/index.d.ts",
  },
  "templates": Array [
    Array [
      "vscode/settings.json",
      ".vscode/settings.json",
    ],
    Array [
      "carnarc.json",
      ".carnarc.json",
    ],
    Array [
      "editorconfig",
      ".editorconfig",
    ],
    Array [
      "eslintignore",
      ".eslintignore",
    ],
    Array [
      "gitignore",
      ".gitignore",
    ],
    Array [
      "npmignore",
      ".npmignore",
    ],
    Array [
      "prettierignore",
      ".prettierignore",
    ],
    Array [
      "babel.config.js",
    ],
    Array [
      "releaserc.json",
      ".releaserc.json",
    ],
    Array [
      "src/bin/index.ts",
    ],
    Array [
      "typescriptrc.json",
      "tsconfig.json",
    ],
    Array [
      "typescriptrc.build.json",
      "tsconfig.build.json",
    ],
    Array [
      "jest.config.js",
    ],
    Array [
      "dummy.test.ts",
      "tests/unit/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/integration/dummy.test.ts",
    ],
    Array [
      "dummy.test.ts",
      "tests/e2e/dummy.test.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/pre.ts",
    ],
    Array [
      "dummyHook.test.ts",
      "tests/e2e/post.ts",
    ],
  ],
}
`;
